@@ -1,0 +1,25 @@
+system type		: SiByte BCM91250A (SWARM)
+processor		: 0
+cpu model		: SiByte SB1 V0.2  FPU V0.2
+BogoMIPS		: 532.48
+byteorder		: big endian
+wait instruction	: no
+microsecond timers	: yes
+tlb_entries		: 64
+extra interrupt vector	: yes
+hardware watchpoint	: yes
+ASEs implemented	: mdmx mips3d
+VCED exceptions		: not available
+VCEI exceptions		: not available
+processor		: 1
+cpu model		: SiByte SB1 V0.2  FPU V0.2
+BogoMIPS		: 532.48
+byteorder		: big endian
+wait instruction	: no
+microsecond timers	: yes
+tlb_entries		: 64
+extra interrupt vector	: yes
+hardware watchpoint	: yes
+ASEs implemented	: mdmx mips3d
+VCED exceptions		: not available
+VCEI exceptions		: not available
