@@ -1,0 +1,10 @@
+subarch sb1-swarm-bn
+cpuinfo swarm.cpuinfo
+majors 2.4
+flavour sb1-swarm-bn
+kernel-2.4 kernel-image-2.4.27-sb1-swarm-bn
+usable \
+  kernel-image-2.4.27-sb1-swarm-bn
+unusable \
+  kernel-image-2.4.27-r4k-ip22 \
+  kernel-image-2.4.27-r5k-ip22
